[gd_scene load_steps=22 format=4 uid="uid://uh6g8bvk5yrd"]

[ext_resource type="Script" uid="uid://bova6i55frp4v" path="res://scene/level_3.gd" id="1_1okqq"]
[ext_resource type="PackedScene" uid="uid://bmnlsmp3disu7" path="res://scene/player.tscn" id="1_5a0ct"]
[ext_resource type="TileSet" uid="uid://bs8bc7tln01es" path="res://InGameAssets/BuildingsTileSet.tres" id="2_b7c0p"]
[ext_resource type="Texture2D" uid="uid://cfxmis15p76k5" path="res://Assets/items/PickableItemImages.png" id="4_1okqq"]
[ext_resource type="PackedScene" uid="uid://cdp82ichpjwub" path="res://scene/pickables.tscn" id="4_b7c0p"]
[ext_resource type="PackedScene" uid="uid://bd1r876nq6mpg" path="res://scene/hazards.tscn" id="6_aeoa0"]
[ext_resource type="Texture2D" uid="uid://bkw681yhbac1b" path="res://Assets/items/smoke.png" id="7_aeoa0"]
[ext_resource type="PackedScene" uid="uid://86wchk4n8rrv" path="res://scene/npc.tscn" id="8_gp511"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5k4cx"]
atlas = ExtResource("4_1okqq")
region = Rect2(-1, -3, 69, 123)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeoa0"]
atlas = ExtResource("4_1okqq")
region = Rect2(459, 11, 44, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1okqq"]
size = Vector2(128, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dp3td"]
size = Vector2(111, 209)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp511"]
atlas = ExtResource("7_aeoa0")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp3td"]
atlas = ExtResource("7_aeoa0")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gijtn"]
atlas = ExtResource("7_aeoa0")
region = Rect2(128, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpi4y"]
atlas = ExtResource("7_aeoa0")
region = Rect2(192, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifvx8"]
atlas = ExtResource("7_aeoa0")
region = Rect2(0, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eoksn"]
atlas = ExtResource("7_aeoa0")
region = Rect2(64, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p1b4"]
atlas = ExtResource("7_aeoa0")
region = Rect2(128, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2u2q"]
atlas = ExtResource("7_aeoa0")
region = Rect2(192, 128, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_xce7v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp511")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp3td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gijtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpi4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifvx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoksn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p1b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2u2q")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_1okqq")

[node name="CharacterBody2D" parent="." instance=ExtResource("1_5a0ct")]
position = Vector2(-627, -90)

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(31, 43)
scale = Vector2(1, 0.068)
zoom = Vector2(1.3, 1.3)
limit_left = -1351
limit_top = -1465
limit_right = 7585
limit_bottom = 300
position_smoothing_enabled = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAAP//AQAAAAAAAAABAP//AQAAAAcAAAD/////AQABAAAAAAAAAP7/AQAAAAEAAAADAP7/AQAAAAEAAAACAP7/AQAAAAIAAAABAP7/AQAAAAYAAAD///7/AQAAAAcAAAAEAP//AQABAAAAAAD+////AQAAAAQAABD+//7/AQAAAAQAABAFAP7/AQABAAAAAAAGAP7/AQABAAAAAAAHAP//AQABAAAAAAAHAP7/AQABAAAAAAACAP//AQABAAIAAAADAP//AQABAAQAAAAEAP7/AQABAAQAAAAIAP//AQABAAEAAAAFAP//AQABAAAAAAAGAP//AQABAAAAAAA=")
tile_set = ExtResource("2_b7c0p")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -213.0
offset_bottom = 376.0
grow_horizontal = 0
size_flags_horizontal = 8

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="cb_FireEx" type="CheckBox" parent="CanvasLayer/VBoxContainer/PanelContainer2"]
layout_mode = 2
focus_mode = 0
button_mask = 0
text = "   Fire Extinguisher"
icon = SubResource("AtlasTexture_5k4cx")
expand_icon = true

[node name="PanelContainer3" type="PanelContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="cb_FireAlarm" type="CheckBox" parent="CanvasLayer/VBoxContainer/PanelContainer3"]
layout_mode = 2
focus_mode = 0
button_mask = 0
text = " Fire Alarm"
icon = SubResource("AtlasTexture_aeoa0")
expand_icon = true

[node name="PanelContainer9" type="PanelContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="cb_smoke" type="CheckBox" parent="CanvasLayer/VBoxContainer/PanelContainer9"]
layout_mode = 2
focus_mode = 0
button_mask = 0
text = "0/2 Smoke Removed
"
expand_icon = true

[node name="FireExtinguisher" parent="." instance=ExtResource("4_b7c0p")]
position = Vector2(-212, -102)
mytype = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireExtinguisher"]
position = Vector2(-5, 13)
shape = SubResource("RectangleShape2D_1okqq")

[node name="Sprite2D" type="Sprite2D" parent="FireExtinguisher"]
position = Vector2(-3.0000534, 57.25585)
scale = Vector2(0.47656417, 0.5001038)
texture = ExtResource("4_1okqq")
region_enabled = true
region_rect = Rect2(0, 0, 58, 113)

[node name="FireAlarm" parent="." instance=ExtResource("4_b7c0p")]
position = Vector2(361, -102)
mytype = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireAlarm"]
position = Vector2(-5, 13)
shape = SubResource("RectangleShape2D_1okqq")

[node name="Sprite2D" type="Sprite2D" parent="FireAlarm"]
position = Vector2(-2.0000076, 1.0000076)
scale = Vector2(0.7165642, 0.66010374)
texture = ExtResource("4_1okqq")
region_enabled = true
region_rect = Rect2(464, 16, 34, 40)

[node name="Spill2" parent="." instance=ExtResource("6_aeoa0")]
position = Vector2(1300, -104)
who_can_fix_me = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spill2"]
position = Vector2(0.5, -18)
shape = SubResource("RectangleShape2D_dp3td")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Spill2"]
position = Vector2(-1.0000324, -18.500006)
scale = Vector2(1.7812494, 1.6015624)
sprite_frames = SubResource("SpriteFrames_xce7v")
autoplay = "default"
frame_progress = 0.698519

[node name="Spill3" parent="." instance=ExtResource("6_aeoa0")]
position = Vector2(1455, -104)
who_can_fix_me = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spill3"]
position = Vector2(0.5, -18)
shape = SubResource("RectangleShape2D_dp3td")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Spill3"]
position = Vector2(-1.0000324, -18.500006)
scale = Vector2(1.7812494, 1.6015624)
sprite_frames = SubResource("SpriteFrames_xce7v")
autoplay = "default"
frame_progress = 0.698519

[node name="CharacterBody2D2" parent="." instance=ExtResource("8_gp511")]
position = Vector2(-413, -26)
